--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>StackIt</h1>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"
-      integrity="sha256-Pg1di+fBF53Rbh9oZR/FeD1xsFzTLC963lcac1D0ias="
-      crossorigin="anonymous"
-    ></script>
     <script src="/main.js"></script>
+    <script src="/p5.js"></script>
   </body>
 </html>
